# openGL-GLFW-GLAD

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  classroom.cpp  main.cpp
include/glad/: glad.h
src/: chair.hpp  cupboard.hpp  fan.hpp  glad.c  glut_compat.hpp  mac_fix.mm  table.hpp  window.hpp
